Rewrite and fix station management functionality
